--- a/tests/StudentManagement.Domain.Tests/StudentManagement.Domain.Tests.csproj
+++ b/tests/StudentManagement.Domain.Tests/StudentManagement.Domain.Tests.csproj
@@ -13,17 +13,19 @@
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="FluentAssertions" Version="8.8.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="NSubstitute" Version="5.3.0" />
+    <PackageReference Include="NSubstitute" Version="5.3.0">
+      <TreatAsUsed>true</TreatAsUsed>
+    </PackageReference>
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Using Include="Xunit" />
+    <ProjectReference Include="..\..\src\StudentManagement.Domain\StudentManagement.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StudentManagement.Domain\StudentManagement.Domain.csproj" />
+    <Using Include="Xunit" />
   </ItemGroup>
 
 </Project>
